# enser

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish.yml
enser_derive/: Cargo.toml
enser_derive/src/: lib.rs
examples/: deserialize.rs  generics.rs  serialize.rs
src/: lib.rs  main.rs
