[package]
name = "enser_derive"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
version = "0.1.3"
edition = "2021"
description = "Proc macro for `enser` crate."
repository = "https://github.com/azriel91/enser"
documentation = "https://docs.rs/enser_derive/"
readme = "../README.md"
categories = ["encoding"]
keywords = ["enum", "tag", "serde"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
proc-macro2 = "1.0.49"
proc_macro_roids = "0.7.0"
